// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DialogOpeningWarningDialog Snapshot Tests matches snapshot with all props 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper max-h-[calc(100vh-10rem)] MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl my-0 rounded-xl z-dialog max-w-full shadow-xl mx-auto css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <header
    class="p-8"
  >
    <div
      class="flex flex-col gap-8"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
          data-test="dialog-title"
        >
          Dialog Opening Title
        </div>
        <div
          class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
          data-test="body"
        >
          This is a description
        </div>
      </div>
      <div>
        <div>
          Header Content
        </div>
      </div>
    </div>
  </header>
  <div
    class="overflow-auto shadow-t"
  >
    <div>
      Dialog Content
    </div>
  </div>
  <div
    class="flex flex-col-reverse flex-wrap justify-end gap-3 px-8 py-4 shadow-t md:flex-row"
  >
    <div
      class="flex flex-row items-center justify-between gap-3 w-full"
    >
      <button
        class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation button-danger min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
        data-test="button"
        tabindex="0"
        type="button"
      >
        Delete Item
      </button>
      <div
        class="flex flex-row items-center gap-3"
      >
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="button"
          tabindex="0"
          type="button"
        >
          Close
        </button>
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="button"
          tabindex="0"
          type="button"
        >
          OK
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogOpeningWarningDialog Snapshot Tests matches snapshot with basic props 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper max-h-[calc(100vh-10rem)] MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl my-0 rounded-xl z-dialog max-w-full shadow-xl mx-auto css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <header
    class="p-8"
  >
    <div
      class="flex flex-col gap-8"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
          data-test="dialog-title"
        >
          Dialog Opening Title
        </div>
      </div>
    </div>
  </header>
  <div
    class="flex flex-col-reverse flex-wrap justify-end gap-3 px-8 py-4 shadow-t md:flex-row"
  >
    <div
      class="flex flex-row items-center justify-between gap-3"
    >
      <div
        class="flex flex-row items-center gap-3"
      >
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="button"
          tabindex="0"
          type="button"
        >
          Close
        </button>
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="button"
          tabindex="0"
          type="button"
        >
          OK
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogOpeningWarningDialog Snapshot Tests matches snapshot with warning button 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper max-h-[calc(100vh-10rem)] MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl my-0 rounded-xl z-dialog max-w-full shadow-xl mx-auto css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <header
    class="p-8"
  >
    <div
      class="flex flex-col gap-8"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
          data-test="dialog-title"
        >
          Dialog Opening Title
        </div>
      </div>
    </div>
  </header>
  <div
    class="flex flex-col-reverse flex-wrap justify-end gap-3 px-8 py-4 shadow-t md:flex-row"
  >
    <div
      class="flex flex-row items-center justify-between gap-3 w-full"
    >
      <button
        class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation button-danger min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
        data-test="button"
        tabindex="0"
        type="button"
      >
        Delete Item
      </button>
      <div
        class="flex flex-row items-center gap-3"
      >
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="button"
          tabindex="0"
          type="button"
        >
          Close
        </button>
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="button"
          tabindex="0"
          type="button"
        >
          OK
        </button>
      </div>
    </div>
  </div>
</div>
`;
